--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
     "@t3-oss/env-core": "^0.12.0",
+    "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.9",
     "lucide-react": "^0.476.0",
     "nanoid": "^5.1.2",
     "react": "19",
     "react-dom": "19",
     "sonner": "^2.0.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.0.9",
     "zod": "^3.24.2"
   },
   "devDependencies": {
