Well working trait similarity game.

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
         "noUnusedTemplateLiteral": "off"
       },
       "complexity": {
-        "noForEach": "off"
+        "noForEach": "off",
+        "useLiteralKeys": "off"
       },
       "suspicious": {
         "noPrototypeBuiltins": "off",
