--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.49.1",
     "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
     "nanoid": "^5.1.2",
     "react": "19",
     "react-dom": "19",
     "sonner": "^2.0.1",
+    "superjson": "^2.2.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -28,6 +34,7 @@
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "4.3.4",
     "typescript": "5.7.3",
-    "vite": "6.2.0"
+    "vite": "6.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
