--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.476.0",
+    "motion": "^12.4.7",
     "nanoid": "^5.1.2",
     "react": "19",
     "react-dom": "19",
